# chess-data-processing

./: .readthedocs.yaml  MANIFEST.in  Pil6M_HKLConv_3D.py  README.md  README_COMPILE_SETUP.txt  SGA_Pil6M_HKLConv_3D_2022_man_1rot.py  SGA_Pil6M_HKLConv_3D_2022_man_3rot.py  SGA_Pil6M_HKLConv_3D_2022_selective.py  SGA_Pil6M_HKLConv_3D_2023.py  SGA_auto_ormfinder.py  SGA_batch_process_orient_index.py  SGA_batch_process_stack.py  SGA_stack_em_all_2022_batch.py  auto_ormfinder_lk_mod_int.py  batch_process_orient_index.py  hkl.py  pyproject.toml
docs/source/: api.rst  index.md
src/: Pil6M_HKLConv_3D.py  anglerock.py  auto_ormfinder.py  auto_ormfinder_mod_int.py  batch_process_stack.py  checkccode.py  orient_index.py
src/_meta/: __init__.py
src/chess-data-processing/: _Pil6M_HKLConv_3D.py  __init__.py  _anglerock.py  _checkccode.py  _hkl.py  _indexing.py  _orienting.py  _stacking.py  hkl.py
tests/: test.py
